# cpp-cmake

./: .codecov.yml  .travis.yml  CMakeLists.txt  DOXYFILE  Dockerfile  Doxyfile  Makefile  README.md  deploy.enc  generateDocumentationAndDeploy.sh  hello.cpp  helloworld.c  helloworld.cpp  sonar-project.properties
cpp/: helloworld.cpp
html/: index.html
latex/: refman.tex
